using Avalonia.Controls;

namespace KitBoxDesigner.Views
{
    public partial class ConfiguratorView : UserControl
    {
        public ConfiguratorView()
        {
            InitializeComponent();
        }
    }
}
