using Avalonia.Controls;

namespace KitBoxDesigner.Views
{
    public partial class InventoryView : UserControl
    {
        public InventoryView()
        {
            InitializeComponent();
        }
    }
}
